--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "Acerca de Nosotros";
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
