--- a/Views/Producto/Index.cshtml
+++ b/Views/Producto/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Inventario de Productos</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear nuevo producto</a>
 </p>
 <table class="table">
     <thead>
