--- a/Views/Producto/Index.cshtml
+++ b/Views/Producto/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Index BIENVENIDO</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -27,7 +27,9 @@
             <th></th>
         </tr>
     </thead>
-    <tbody>
+
+    <tbody style="background-color:#F0F8FF;">
+
 @foreach (var item in Model) {
         <tr>
             <td>
