--- a/Views/Producto/Create.cshtml
+++ b/Views/Producto/Create.cshtml
@@ -33,14 +33,14 @@
                 <span asp-validation-for="Peso_KG" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Crear" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la lista</a>
 </div>
 
 @section Scripts {
