--- a/Views/Producto/Details.cshtml
+++ b/Views/Producto/Details.cshtml
@@ -33,11 +33,11 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Peso_KG)
-        </dd>tml.DisplayFor(model => model.Salary)
+        </dd>
         </dd>
     </dl>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Editar</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la lista</a>
 </div>
