--- a/Views/Producto/Index.cshtml
+++ b/Views/Producto/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index BIENVENIDO</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Agregar nuevo producto</a>
 </p>
 <table class="table">
     <thead>
