--- a/Views/Producto/Index.cshtml
+++ b/Views/Producto/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index BIENVENIDO</h2>
 
 <p>
-    <a asp-action="Create">Agregar nuevo producto</a>
+    <a asp-action="Create" class="btn btn-primary">Agregar nuevo producto</a>
 </p>
 <table class="table">
     <thead>
@@ -45,10 +45,12 @@
                 @Html.DisplayFor(modelItem => item.Peso_KG)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Detalle</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
-            </td>
+               
+                    <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Editar</a>
+              
+                    <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Detalle</a> |
+                    <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Eliminar</a>
+</td>
         </tr>
 }
     </tbody>
