Cambio Etiqueta Home Page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page politec";
+    ViewData["Title"] = "Pagina Inicio ";
 }
 <div class="jumbotron">
     <h1>ASP.NET</h1>
