--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,15 +1,16 @@
 ﻿@{
-    ViewData["Title"] = "Pagina Inicio ";
+    ViewData["Title"] = "Inventario de productos";
 }
+
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Inventario de Productos</h1>
+    <p class="lead">Ofrecemos servicios de inventario de productos por medio del software el cual permite agregar, editar, modificar y eliminar productos.</p>
+    <p><a href="" class="btn btn-primary btn-lg">Ver más &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Comenzando</h2>
+        <h2>Empezando/h2>
         <p>
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
             enables a clean separation of concerns and gives you full control over markup
@@ -18,14 +19,13 @@
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Encontrar mas librerias</h2>
+        <h2>Conseguir más</h2>
         <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
+        <h2>Hospedaje Web</h2>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
-
