--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -4,4 +4,6 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Para agregar informacion se debe agregar el producto junto a las caracteristicas dadas</p>
+
+
