--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -4,6 +4,6 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Para agregar informacion se debe agregar el producto junto a las caracteristicas dadas</p>
+<p>Para agregar informacion se debe agregar el producto junto a las caracteristicas dadas e</p>
 
 
