--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,11 +10,9 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Empezando/h2>
+        <h2>Empezando</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Por medio de este formulario podemos administrar nuestros productos y la gestion de los mismos.
         </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
