--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -4,7 +4,7 @@
 <h2>@ViewData["Title"]</h2>
 
 
-<p>Para agregar informacion se debe agregar el producto junto a las caracteristicas dadasÑ </p>
+<p>Para agregar información se debe agregar el producto junto a las caracteristicas dadas </p>
 <form>
     <fieldset>
         <legend>Categoria de empresa</legend>
