--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -7,7 +7,7 @@
 <p>Para agregar información se debe agregar el producto junto a las caracteristicas dadas </p>
 <form>
     <fieldset>
-        <legend>Categoria de empresa Prueba Jenkis</legend>
+        <legend>Categoria de empresa</legend>
         <p>
             <input type="radio" name="size" id="size_1" value="small">
             <label for="size_1">Pequeña</label>
