Cambio de Contacto

--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -4,14 +4,37 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<body>
+		<div class="row">
+			<div class="col-md-12">
+				<div class="contacto" >
+				<h1 align="center">CONTACTO</h1><br>
+				<p><h1>¡Inventario de productos¡.</h1></p>
 
-<address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+			</div>
+			</div>
+			<div class="col-md-12">
+				<div class="telefonos">
+			
+						<h1>Acerca de nosotros</h1>
+						<p> Tu  portal de internet para admninistrar tus,<br>
+				 productos de tecnología y entretenimiento. Ofrecemos la más amplia selección y variedad a los mejores precios en la puerta de tu casa.<br>
+				  
+
+									
+
+			</div>
+			</div>
+		</div>
+		
+			
+			
+
+		<div class="map" align="center">		
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.8354900418162!2d-3.668800695606529!3d40.41249506162787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x7125d84c56261dc2!2sTesorer%C3%ADa+General+de+la+Seguridad+Social!5e0!3m2!1ses!2ses!4v1426205501205" width="500" height="400" frameborder="0" style="border:5"></iframe>
+		
+		</div>
+
+		
+
+	</body>
