--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Producto" asp-action="Index">Producto</a></li>
+                    <li><a asp-area="" asp-controller="Inventarios" asp-action="Index">Inventario</a></li>
                 </ul>
             </div>
         </div>
@@ -43,7 +44,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - InventatioMVC</p>
+            <p>&copy; 2020 - InventatioMVC</p>
         </footer>
     </div>
 
