--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,6 +4,6 @@
 
 <div class="jumbotron">
     <h1>PRUEBA TRAVIS</h1>
-    <p class="lead">Ofrecemos servicios de inventario de productos por medio del software el cual permite agregar, editar, modificar y eliminar productos.</p>
+    <p class="lead">Prueba de cambio Ofrecemos servicios de inventario de productos por medio del software el cual permite agregar, editar, modificar y eliminar productos.</p>
     <p><a href="" class="btn btn-primary btn-lg">Ver más &raquo;</a></p>
 </div>
