--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -8,8 +8,8 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="contacto" >
-				<h1>CONTACTO</h1><br>
-				<p><h1>¡Inventario de productos¡.</h1></p>
+				<h2>CONTACTO</h2><br>
+				<p><h2>¡Inventario de productos¡.</h2></p>
 
 			</div>
 			</div>
@@ -18,7 +18,8 @@
 			
 						<h1>Acerca de nosotros</h1>
 						<p> Tu  portal de internet para admninistrar tus,<br>
-				 productos de tecnología y entretenimiento. Ofrecemos la más amplia selección y variedad a los mejores precios en la puerta de tu casa.<br>
+				                        productos de tecnología y entretenimiento. Ofrecemos la más amplia selección <br>
+							y variedad a los mejores precios en la puerta de tu casa.<br>
 				  
 
 									
