Add Producto Drop down list

--- a/Views/Inventarios/Details.cshtml
+++ b/Views/Inventarios/Details.cshtml
@@ -16,6 +16,12 @@
         <dd>
             @Html.DisplayFor(model => model.Cantidad)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Productos.Nombre)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Productos.Nombre)
+        </dd>
     </dl>
 </div>
 <div>
