--- a/Views/Inventarios/Create.cshtml
+++ b/Views/Inventarios/Create.cshtml
@@ -13,6 +13,15 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Productos" class="control-label"></label>
+                <select asp-for="ProductosId" 
+                        asp-items="@(new SelectList(ViewBag.ProductoList,"Id","Nombre"))">
+                    <option>Please select one</option>
+                </select>
+                <span asp-validation-for="Productos" class="text-danger"></span>
+
+            </div>
+            <div class="form-group">
                 <label asp-for="Cantidad" class="control-label"></label>
                 <input asp-for="Cantidad" class="form-control" />
                 <span asp-validation-for="Cantidad" class="text-danger"></span>
