--- a/Views/Inventarios/Delete.cshtml
+++ b/Views/Inventarios/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Eliminar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Esta seguro de eliminar esto?</h3>
 <div>
     <h4>Inventario</h4>
     <hr />
