--- a/Views/Inventarios/Index.cshtml
+++ b/Views/Inventarios/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Inventario</h2>
 
 <p>
     <a  asp-action="Create" class="btn btn-primary">Agregar</a>
@@ -33,7 +33,7 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-secondary">Editar</a> 
                 <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-secondary">Detalle</a> 
-                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Elliminar</a>
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Eliminar</a>
             </td>
         </tr>
 }
