--- a/Views/Producto/Index.cshtml
+++ b/Views/Producto/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Inventario de Productos</h2>
+<h2>Productos</h2>
 
 <p>
     <button asp-action="Create" class="btn btn-primary">Agregar</button>
@@ -45,7 +45,7 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-secondary">Editar</a>
                 <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-secondary">Detalle</a>
-                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Elliminar</a>
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Eliminar</a>
             </td>
         </tr>
 }
