--- a/Views/Producto/Index.cshtml
+++ b/Views/Producto/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Productos</h2>
 
 <p>
-    <button asp-action="Create" class="btn btn-primary">Agregar</button>
+    <a asp-action="Create" class="btn btn-primary">Agregar</a>
 </p>
 <table class="table">
     <thead>
