--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>Prueba Jenkis</h1>
+    <h1>Prueba Jenkis Final</h1>
     <p class="lead">Ofrecemos servicios de inventario de productos por medio del software el cual permite agregar, editar, modificar y eliminar productos.</p>
     <p><a href="" class="btn btn-primary btn-lg">Ver más &raquo;</a></p>
 </div>
